<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewOtherProfileActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"

        android:background="#212121"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- android:background="?attr/colorPrimary" -->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_button" />

        <!--  android:onClick="back_to_main" -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="Profile"
            android:textSize="20dp"/>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:src="@drawable/ic_settings"
            android:paddingStart="240dp"
            />

        <!--android:onClick="To_personalisationActivity"-->


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin">


                <ImageView
                    android:id="@+id/imageViewProfile"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pexels_photo"
                    android:scaleType="centerCrop"

                    />

                <TextView
                    android:id="@+id/textViewUsername"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="person"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imageViewProfile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageButton
                    android:id="@+id/buttonInvite"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="#80cbc4"
                    android:padding="10dp"
                    android:src="@drawable/ic_invite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">


                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/pencil"
                    android:scaleType="centerCrop"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/shoe"
                    android:scaleType="centerCrop"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/magic"
                    android:scaleType="centerCrop"/>
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/doughnut"
                    android:scaleType="centerCrop"/>
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/bird"
                    android:scaleType="centerCrop"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Icons made by "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_to_author"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" from "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_to_sight"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="bottom">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" under licence "/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/link_CC"/>



            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Status"
        android:gravity="center"
        android:textSize="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:gravity="center"
            android:textSize="20dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerInside"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_horizontal_margin"/>

    </LinearLayout>



</LinearLayout>